--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -6,7 +6,7 @@
 
     .content {
       max-width: 1120px;
-      margin: 0;
+      margin: 0 auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -95,6 +95,10 @@
           }
         }
       }
+    }
+
+    .question-list{
+      margin-top: 32px;
     }
   }
 }
